# juce-app-version-bug

./: .clang-format  CMakeLists.txt  main.cpp
